@startuml

title __DAO's Class Diagram__\n

    namespace om.fs.springboot {
      namespace dao {
        class com.fs.springboot.dao.AsyncLog {
            - message : String
            - service : String
            - status : String
            + AsyncLog()
            + run()
        }
      }
  }
  

    namespace om.fs.springboot {
      namespace dao {
        class com.fs.springboot.dao.SpeechTranscriberAccessService {
            + SpeechTranscriberAccessService()
            + transcribe()
        }
      }
  }
  

    namespace om.fs.springboot {
      namespace dao {
        interface com.fs.springboot.dao.SpeechTranscriberDao {
            {abstract} + transcribe()
        }
    }
  }
  

    namespace om.fs.springboot {
      namespace dao {
        class com.fs.springboot.dao.ToneAnalyzerAccessService {
            + selectToneOptions()
        }
    }
  }
  

    namespace om.fs.springboot {
      namespace dao {
        interface com.fs.springboot.dao.ToneAnalyzerDao {
            {abstract} + selectToneOptions()
        }
      }
    }


  com.fs.springboot.dao.AsyncLog .up.|> java.lang.Runnable
  com.fs.springboot.dao.AsyncLog o-- com.fs.springboot.services.LogService : logService
  com.fs.springboot.dao.SpeechTranscriberAccessService .up.|> com.fs.springboot.dao.SpeechTranscriberDao
  com.fs.springboot.dao.SpeechTranscriberAccessService o-- com.fs.springboot.Auth : auth
  com.fs.springboot.dao.SpeechTranscriberAccessService o-- com.fs.springboot.services.LogService : logService
  com.fs.springboot.dao.SpeechTranscriberAccessService o-- com.fs.springboot.services.ToneAnalyzerService : toneAnalyzerService
  com.fs.springboot.dao.ToneAnalyzerAccessService .up.|> com.fs.springboot.dao.ToneAnalyzerDao


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
